--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Главная - MEVN</title>
+    <meta name="description" content="Главная - MEVN" />
   </head>
   <body>
     <div id="app"></div>
